--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "apexcharts": "^3.22.0",
     "ra-data-simple-rest": "^3.9.1",
     "react": "^16.13.1",
     "react-admin": "^3.9.2",
+    "react-apexcharts": "^1.3.7",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
