--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,9 +21,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
+    "file-loader": "^6.1.1",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
