--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,11 +7,13 @@ Flask==1.1.2
 flask-marshmallow==0.14.0
 Flask-Migrate==2.5.3
 Flask-RESTful==0.3.8
+flask-restful-swagger==0.20.2
 Flask-SQLAlchemy==2.4.4
 importlib-metadata==2.0.0
 iniconfig==1.0.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
+jsonschema==3.2.0
 Mako==1.1.3
 MarkupSafe==1.1.1
 marshmallow==3.8.0
@@ -22,6 +24,7 @@ pluggy==0.13.1
 psycopg2==2.8.6
 py==1.9.0
 pyparsing==2.4.7
+pyrsistent==0.17.3
 pytest==6.1.1
 python-dateutil==2.8.1
 python-editor==1.0.4
