--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "watch": "webpack --mode development -w",
     "dev": "webpack --mode development --progress",
-    "build": "webpack --mode production --progress"
+    "build": "webpack --mode production --progress",
+    "test": "jest"
   },
   "author": "STdevelopr",
   "license": "ISC",
@@ -17,7 +18,8 @@
     "react": "^16.13.1",
     "react-admin": "^3.9.2",
     "react-apexcharts": "^1.3.7",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-test-renderer": "^16.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
@@ -27,6 +29,7 @@
     "babel-loader": "^8.1.0",
     "file-loader": "^6.1.1",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^26.5.3",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
